syntax = "proto3";

package notekeeper;

// N.B. - In the go bindings, case of the generated methods matches these proto definitions
// However, in the JS bindings, method names start lowercase (so it's, e.g. "openMasterDb" instead of "OpenMasterDb")
// If you try to invoke the latter, the client will just hang indefinitely.
// Another gotcha with the JS bindings is getter/setter method names -
// The entire fieldname is lowercase except for the first character in the method name.
// E.g., if the message field is named "windowWidth", the getter/setter pair is "getWindowwidth"/"setWindowwidth".
// Trying to call, e.g. "getWindowWidth" will cause the client to hang as with incorrect service method names.

// All requests will include this embedded message type
message RequestHeader {
	string method = 1;
	bytes signature = 2;
	int32 sequence = 3;
}

// All responses will include this embedded message type
message ResponseHeader {
	string status = 1;
	int32 code = 2;
	bytes signature = 3;
	int32 sequence = 4;
}

// A key exchange client request
message KeyExchangeRequest {
	RequestHeader header = 1;
	bytes publicKey = 2;
}

// A key exchange server response
message keyExchangeResponse {
	ResponseHeader header = 1;
	bytes publicKey = 2;
}

// All below message types are legacy types to be replaced

message StatusResponse {
	string status = 1;
	int32 code = 2;
}

// a generic RPC request message
message TokenRequest {
	string token = 1;
}

// a generic RPC request message containing a common UUID string
message IdRequest {
	string id = 1;
}

// a generic RPC response message containing a common UUID string and status
message IdResponse {
	string id = 1;
	string status = 2;
	int32 code = 3;
}

message UIStateResponse {
	StatusResponse status = 1;
	int32 windowWidth = 2;
	int32 windowHeight = 3;
	int32 windowXPosition = 4;
	int32 windowYPosition = 5;
	bool windowMaximized = 6;
	bool windowMinimized = 7;
	bool windowFullscreen = 8;
	int32 displayWidth = 9;
	int32 displayHeight = 10;
	int32 displayXPosition = 11;
	int32 displayYPosition = 12;
}

message SaveUIStateRequest {
	StatusResponse status = 1;
	int32 windowWidth = 2;
	int32 windowHeight = 3;
	int32 windowXPosition = 4;
	int32 windowYPosition = 5;
	bool windowMaximized = 6;
	bool windowMinimized = 7;
	bool windowFullscreen = 8;
	int32 displayWidth = 9;
	int32 displayHeight = 10;
	int32 displayXPosition = 11;
	int32 displayYPosition = 12;
}

message AccountStateResponse {
	bool signedIn = 1;
	bool locked = 2;
	bool exists = 3;
}

message OpenMasterDbRequest {
	string path = 1; // user data directory path
}

message CreateAccountRequest {
	string name = 1; // account name
	string email = 2; // user email
	string passphrase = 3; // user password
}

message UnlockAccountRequest {
	string id = 1;
	string passphrase = 2;
}

message SigninAccountRequest {
	string name = 1;
	string email = 2;
	string passphrase = 3;
}

message CreateNotebookRequest {
	string name = 1;
	string user_id = 2;
	string shelf_id = 3;
}
